# linear-algebra-library

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Array.hpp  ArrayView.hpp  concepts.hpp  types.hpp  util.hpp
src/algorithm/: fill.hpp  random.hpp
src/backends/: cuda.hpp  host.hpp  opencl.hpp
src/backends/cuda/: algorithm.hpp  math.hpp  memory.hpp
src/backends/cuda/algorithm/: FillFn.hpp  RandomFn.hpp
src/backends/cuda/algorithm/detail/: fill.cu  fill.cuh  random.cu  random.cuh
src/backends/cuda/exceptions/: CublasException.hpp  CudaException.hpp
src/backends/cuda/kernels/: common.cuh  for_each.cuh
src/backends/cuda/math/: ArithmeticFn.hpp  AxpyFn.hpp  PowFn.hpp  SinFn.hpp  TransposeFn.hpp  arithmetic.cu  arithmetic.cuh  complex.cuh  pow.cu  pow.cuh  sin.cu  sin.cuh
src/backends/cuda/memory/: Allocator.hpp  Context.hpp  Copy.hpp
src/backends/host/: algorithm.hpp  math.hpp  memory.hpp
src/backends/host/algorithm/: FillFn.hpp  RandomFn.hpp
src/backends/host/math/: ArithmeticFn.hpp  AxpyFn.hpp  PowFn.hpp  SinFn.hpp  TransposeFn.hpp
src/backends/host/memory/: Allocator.hpp  Copy.hpp
src/backends/opencl/: algorithm.hpp  common.hpp  math.hpp  memory.hpp
src/backends/opencl/algorithm/: FillFn.hpp  RandomFn.hpp
src/backends/opencl/exceptions/: CLBlastException.hpp  OpenCLException.hpp
src/backends/opencl/kernels/: Kernel.hpp
src/backends/opencl/math/: ArithmeticFn.hpp  AxpyFn.hpp  PowFn.hpp  SinFn.hpp  TransposeFn.hpp  complex.hpp
src/backends/opencl/memory/: Allocator.hpp  Context.hpp  Copy.hpp  Pointer.hpp
src/exceptions/: Exception.hpp  SourceLocation.hpp
src/math/: arithmetic.hpp  axpy.hpp  pow.hpp  sin.hpp  transpose.hpp
src/memory/: AllocatorTraits.hpp  Copy.hpp  Memory.hpp  MemoryBase.hpp  MemoryIterator.hpp  MemoryView.hpp  Reference.hpp
tests/: Array.cpp  CMakeLists.txt  Memory.cpp  MemoryView.cpp  common.hpp  math.cpp
